# python-ddd-architecture-for-php-devs

./: .env  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
config/: db.py
src/client/: __init__.py  boostrap.py
src/client/application/: __init__.py  command.py  handler.py
src/client/domain/: entity.py  repository.py
src/client/infrastructure/: repository.py
src/client/ui/: controllers.py  request.py
